[package]
name = "cerebral"
version = "0.0.1"
edition = "2021"
description = "A package for composable algorithms for self-organizing neural networks for research purposes."
readme = "Readme.md"
repository = "https://github.com/StefanUlbrich/citrate/"
license = "MIT OR Apache-2.0"
homepage = "https://stefanulbrich.github.io/citrate/"
documentation = "https://stefanulbrich.github.io/citrate/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [features]

# simple = []
# # rayon = ["rayon"]
# nd-rayon = ["ndarray/rayon"]
# # ndarray = []
# rand = ["rand_isaac","ndarray-rand"]

[dependencies]
# ndarray = { version = "0.15", optional=true}
ndarray = { version = "0.15", features = ["rayon"]}

# rayon = {version = "*", optional=true}
# ndarray-rand = {version = "0.14", optional=true}
num-traits = "0.2"
# rand_isaac = {version="0.3", optional=true}

[dev-dependencies]
ndarray-rand = "0.14"
rand_isaac = "0.3"
ndarray = "0.15"
itertools = "0.10.5"
