###############################################################################
## Packaging (Maturin)

# Meta information
[project]
name = "cerebral"
version = "0.1.1"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
readme = "Readme.md"
# packages = [{include = "cerebral", from="python"}] # Todo: get poetry build to work


# Configuration
[tool.maturin]
python-source = "python"

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"


## Meta information ignored by Maturin, i.e., not used for the package
[tool.poetry]
name = "cerebral"
version = "0.0.0"
description = ""
authors = ["Stefan Ulbrich <6009224+StefanUlbrich@users.noreply.github.com>"]
license = "MIT"

# Convenience commands available in virtual environment
[tool.poetry.scripts]
potpourri-data = 'potpurri:generate_data'


###############################################################################
## Dependency for virtual environment (developing/testing). Ignored by Maturin!

# Main dependencies (ignored by maturin)
[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scipy = "^1.11.1"
scikit-learn = "^1.3.0"
numpy = "^1.25.1"
seaborn = "^0.12.2"
matplotlib = "^3.7.2"
pip = "^23.2.1" # required

# Optionally: jupyter lab
[tool.poetry.group.jupyter]
optional = true

[tool.poetry.group.jupyter.dependencies]
jupyterlab = "^4.0.3"
jupyter-black = "^0.3.4"
ipykernel = "^6.9.1"

# Tools
[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.278"
mypy = "^1.4.1"
maturin = "^1.1.0"


###############################################################################
## Tools configuration

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120