[package]
name = "pypotpourri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "potpourri"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.2", features = ["extension-module"] }
potpourri = { path = "../potpourri-rs"}
numpy = "0.19.0"
ndarray-rand = "0.14"
rand_isaac = "0.3"
ndarray = "0.15"