[package]
name = "pysom"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pysom"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.1", features = ["extension-module"] }
cerebral = { path = "../cerebral-rs"}
numpy = "0.16"
ndarray-rand = "0.14"
rand_isaac = "0.3"
ndarray = "0.15"