# see https://github.com/tmtenbrink/rustfrc/blob/main/pyproject.toml

# Created by poetry 

[tool.poetry]
name = "pysom"
version = "0.1.0"
description = "An implementation of self organizing maps in Rust"
authors = ["Stefan Ulbrich"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
maturin = "^0.12.11"
# pylint = "^2.12.1,!=2.12.2"
black = "^21.12b0"
# mypy = "^0.931"
pytest = "^6.2.5"
ipykernel = "^6.9.1"
sphinx-book-theme = "^0.2.0"
myst-parser = "^0.17.0"
# pre-commit = "^2.17.0"


# [build-system]
# requires = ["poetry-core>=1.0.0"]
# build-backend = "poetry.core.masonry.api"

# Created by maturin

[project]
name = "pysom"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
readme = "Readme.md"

[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"